fix: overflow svg feature

--- a/src/app/features/features.component.css
+++ b/src/app/features/features.component.css
@@ -9,18 +9,26 @@ h3 {
   font-size: 22px;
   font-weight: 400;
   margin-top: 0;
+  margin-bottom: 40px;
 }
 
 .features-container {
   display: grid;
   grid-template-columns: 1fr;
-  margin-top: 40px;
+  row-gap: 50px;
+  max-width: 850px;
+  margin-inline: auto;
 }
 
 .image-container {
   width: 30px;
   height: 30px;
   margin-inline: auto;
+  overflow: hidden;
+}
+
+.text p {
+  font-size: 14px;
 }
 
 @media screen and (min-width: 768px) {
